attachment layout issue fixed

--- a/src/app/core/components/chat/chat-msg/chat-msg.component.css
+++ b/src/app/core/components/chat/chat-msg/chat-msg.component.css
@@ -68,55 +68,65 @@
   padding: 16px;
   border-bottom: 1px solid #ddd;
 }
-
 .input-container {
   display: flex;
   align-items: center;
-  /* padding: 8px 16px; */
   background-color: #f5f5f5;
 }
 
-.input-container input {
+.input-container input.form-control {
   flex: 1;
   padding: 8px;
-  border: 0px !important;
-  /* border-radius: 4px; */
+  border: 0;
   height: 82px;
   background-color: #f5f5f5;
 }
 
 .input-container button {
+  position: relative;
   padding: 10px;
   margin-right: 20px;
-  background: none;
+  background-color: #f28f45;
   border: none;
   border-radius: 50%;
-  background-color: #f28f45;
+  cursor: pointer;
 }
+
+.input-container button .fa-paperclip {
+  color: white;
+}
+
 .input-container button img {
   width: 20px;
   height: 20px;
   margin-top: -3px;
 }
-input:focus {
-  border: none;
-  outline: none;
-}
-
-input:focus-visible {
-  border: none;
-  outline: none;
-}
 
 .file-input {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0; /* Hides the file input completely */
-  cursor: pointer;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0; /* Makes the file input invisible */
+  cursor: pointer;
 }
-.fa-paperclip{
-  color: white;
+
+.attach-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.send-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.file-preview-image {
+  max-width: 100px;
+  max-height: 100px;
+  border-radius: 4px;
+  margin-right: 8px;
 }
